crates/rskim-core/tests/snapshots/truncation_golden__go_comments_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_COMMENTS, Language::Go,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
// FIXTURE: Go file with various comment types
// TESTS: Minimal mode comment stripping

package main
// ... (43 lines truncated)
