crates/rskim-core/tests/snapshots/truncation_golden__go_comments_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_COMMENTS, Language::Go,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
// FIXTURE: Go file with various comment types
// TESTS: Minimal mode comment stripping
// ... (9 lines truncated)
func Add(a int, b int) int  {...}
// ... (9 lines truncated)
type Calculator struct {
	// Value field comment inside struct (STRIP - not a function body)
	value int
}
// ... (4 lines truncated)
func NewCalculator(value int) *Calculator  {...}
// ... (5 lines truncated)
func (c *Calculator) Add(x int) int  {...}
// ... (11 lines truncated)
