crates/rskim-core/tests/snapshots/truncation_golden__go_comments_structure_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_COMMENTS, Language::Go, TransformConfig::with_mode(Mode::Structure))"
---
// FIXTURE: Go file with various comment types
// TESTS: Minimal mode comment stripping

package main

// This is a standalone comment not adjacent to a declaration (STRIP)

/* This is a standalone block comment (STRIP) */

// Add adds two numbers together.
// This is a Go doc comment adjacent to a declaration (KEEP).
func Add(a int, b int) int  {...}

// Regular comment not adjacent to declaration (STRIP)

// Calculator is a simple calculator.
// Multi-line Go doc comment (KEEP).
type Calculator struct {
	// Value field comment inside struct (STRIP - not a function body)
	value int
}

/* Block comment at module level not adjacent to declaration (STRIP) */

// NewCalculator creates a new Calculator.
func NewCalculator(value int) *Calculator  {...}

// Add adds to the calculator value.
func (c *Calculator) Add(x int) int  {...}

// Standalone comment (STRIP)




// Test blank line normalization: 4+ blank lines above (normalize to 2)

var Version = "1.0.0"
