crates/rskim-core/tests/snapshots/truncation_golden__go_simple_pseudo_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(15))"
---
// FIXTURE: Simple Go functions
// TESTS: Basic function signature extraction

package main

import "fmt"

func Add(a int, b int) int {
    return a + b
}

func Greet(name string) string {
    return fmt.Sprintf("Hello, %s!", name)
}
// ... (20 lines truncated)
