crates/rskim-core/tests/snapshots/truncation_golden__go_simple_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
// FIXTURE: Simple Go functions
// TESTS: Basic function signature extraction

package main
// ... (30 lines truncated)
