crates/rskim-core/tests/snapshots/truncation_golden__go_simple_signatures_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go, TransformConfig::with_mode(Mode::Signatures))"
---
func Add(a int, b int) int
func Greet(name string) string
func (c *Calculator) Add(x int) int
