crates/rskim-core/tests/snapshots/truncation_golden__go_simple_structure_last10.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go,\nTransformConfig::with_mode(Mode::Structure).with_last_lines(10))"
---
// ... (25 lines above)
}

type Status int

const (
    Active Status = iota
    Inactive
    Pending
)
